--- a/src/chrome/browser/feeds/subscribe.css
+++ b/src/chrome/browser/feeds/subscribe.css
@@ -3,23 +3,24 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 html {
-  background: -moz-Dialog;
+  background: rgb(23,23,23);
   font: 3mm tahoma,arial,helvetica,sans-serif;
 }
 
 #feedBody {
-  border: 1px solid THreeDShadow;
+  border: 1px solid rgb(50,50,50);
+  border-radius: 10px;
   padding: 3em;
   -moz-padding-start: 30px;
   margin: 2em auto;
-  background: -moz-Field;
+  background: rgb(43,43,43);
 }
 
 #feedHeaderContainer {
-  border: 1px solid ThreeDShadow;
+  border: 1px solid rgb(43,43,43);
   border-radius: 10px;
   margin: -4em auto 0 auto;
-  background-color: InfoBackground;
+  background-color: rgb(50,50,50);
 }
 
 #feedHeader {  
@@ -29,7 +30,7 @@ html {
   -moz-margin-end: 1em;
   -moz-padding-start: 2.9em;
   font-size: 110%;
-  color: InfoText;
+  color: #fff;
 }
 
 #feedIntroText {
@@ -37,15 +38,15 @@ html {
 }
 
 .feedBackground {
-  background: url("chrome://browser/skin/feeds/feedIcon.png") 0% 10% no-repeat InfoBackground;
+  background: url("chrome://browser/skin/feeds/feedIcon.png") 0% 10% no-repeat rgb(50,50,50);
 }
 
 .videoPodcastBackground {
-  background: url("chrome://browser/skin/feeds/videoFeedIcon.png") 0% 10% no-repeat InfoBackground;
+  background: url("chrome://browser/skin/feeds/videoFeedIcon.png") 0% 10% no-repeat rgb(50,50,50);
 }
 
 .audioPodcastBackground {
-  background: url("chrome://browser/skin/feeds/audioFeedIcon.png") 0% 10% no-repeat InfoBackground;
+  background: url("chrome://browser/skin/feeds/audioFeedIcon.png") 0% 10% no-repeat rgb(50,50,50);
 }
 
 #feedHeader[dir="rtl"] {
@@ -76,18 +77,17 @@ html {
 body {
   margin: 0;
   padding: 0 3em;
-  color: -moz-fieldText;
+  color: #fff;
   font: message-box;
 }
 
 h1 {
   font-size: 160%;
-  border-bottom: 2px solid ThreeDLightShadow;
+  border-bottom: 1px solid rgb(50,50,50);
   margin: 0 0 .2em 0;
 }
 
 h2 {
-  color: ThreeDDarkShadow;
   font-size: 110%;
   font-weight: normal;
   margin: 0 0 .6em 0;
@@ -125,14 +125,18 @@ a[href] img {
   font-size: 110%;
 }
  
-.link {
-  color: #0000FF;
+.link,
+a {
+  color: #fff;
   text-decoration: underline;
   cursor: pointer;
 }
 
-.link:hover:active {
-  color: #FF0000;
+.link:hover,
+.link:hover:active,
+a:hover,
+a:hover:active {
+  color: rgb(219,219,219);
 }
 
 .lastUpdated {
@@ -147,10 +151,10 @@ a[href] img {
 }
 
 .enclosures {
-  border: 1px solid THreeDShadow;
+  border: rgb(50,50,50);
   padding: 1em;
   margin: 1em auto;
-  background: -moz-Dialog;
+  background: rgb(43,43,43);
 }
 
 .enclosure {
