--- a/src/chrome/browser/downloads/allDownloadsViewOverlay.css
+++ b/src/chrome/browser/downloads/allDownloadsViewOverlay.css
@@ -14,6 +14,7 @@
 
 #downloadsRichListBox > richlistitem.download {
   height: 6em;
+  border-bottom: 1px solid rgb(50,50,50);
 }
 
 .downloadTypeIcon {
