--- a/src/chrome/browser/statusbar/prefs.css
+++ b/src/chrome/browser/statusbar/prefs.css
@@ -4,39 +4,32 @@
 
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
-#status4evar-prefs > prefpane > vbox.content-box
-{
+#status4evar-prefs > prefpane > vbox.content-box {
 	min-height: 18em !important;
 }
 
-radio[pane="status4evar-pane-status"]
-{
-	list-style-image: url("chrome://global/skin/icons/information-16.svg");
+radio[pane="status4evar-pane-status"] {
+	list-style-image: url("chrome://browser/skin/statusbar/status.png");
 }
 
-radio[pane="status4evar-pane-progress"]
-{
-	list-style-image: url("chrome://browser/skin/statusbar/throbberStatic.png");
+radio[pane="status4evar-pane-progress"] {
+	list-style-image: url("chrome://browser/skin/statusbar/progress.png");
 }
 
-radio[pane="status4evar-pane-download"]
-{
-	list-style-image: url("chrome://mozapps/skin/downloads/downloadIcon.png");
+radio[pane="status4evar-pane-download"] {
+	list-style-image: url("chrome://abouthome/skin/downloads.png");
 }
 
-radio[pane="status4evar-pane-addonbar"]
-{
-	list-style-image: url("chrome://mozapps/skin/extensions/addons.svg#extensions");
+radio[pane="status4evar-pane-addonbar"] {
+	list-style-image: url("chrome://browser/skin/statusbar/statusbar.png");
 }
 
-radio[pane="status4evar-pane-advanced"]
-{
+radio[pane="status4evar-pane-advanced"] {
 	list-style-image: url("chrome://browser/skin/preferences/Options.png");
 	-moz-image-region: rect(0px, 224px, 32px, 192px);
 }
 
-#status4evar-advanced-urlbar-forceBinding-desc
-{
+#status4evar-advanced-urlbar-forceBinding-desc {
 	-moz-appearance: none;
 	pointer-events: none;
 	background-color: transparent;
@@ -44,8 +37,7 @@ radio[pane="status4evar-pane-advanced"]
 	padding: 0px;
 }
 
-#warningInnerBox
-{
+#warningInnerBox {
 	max-width: 25em;
 }
 
