Downloads UI fixes

--- a/src/chrome/browser/downloads/downloads.css
+++ b/src/chrome/browser/downloads/downloads.css
@@ -167,40 +167,31 @@ richlistitem[type="download"]:first-child {
 .downloadButton.downloadCancel {
   -moz-image-region: rect(0px, 16px, 16px, 0px);
 }
-richlistitem[type="download"]:hover > stack > .downloadButton.downloadCancel {
+.downloadButton.downloadCancel:hover {
   -moz-image-region: rect(0px, 32px, 16px, 16px);
 }
-richlistitem[type="download"]:hover > stack > .downloadButton.downloadCancel:hover {
+.downloadButton.downloadCancel:active {
   -moz-image-region: rect(0px, 48px, 16px, 32px);
-}
-richlistitem[type="download"]:hover > stack > .downloadButton.downloadCancel:active {
-  -moz-image-region: rect(0px, 64px, 16px, 48px);
 }
 
 .downloadButton.downloadShow {
   -moz-image-region: rect(16px, 16px, 32px, 0px);
 }
-richlistitem[type="download"]:hover > stack > .downloadButton.downloadShow {
+.downloadButton.downloadShow:hover {
   -moz-image-region: rect(16px, 32px, 32px, 16px);
 }
-richlistitem[type="download"]:hover > stack > .downloadButton.downloadShow:hover {
+.downloadButton.downloadShow:active {
   -moz-image-region: rect(16px, 48px, 32px, 32px);
-}
-richlistitem[type="download"]:hover > stack > .downloadButton.downloadShow:active {
-  -moz-image-region: rect(16px, 64px, 32px, 48px);
 }
 
 .downloadButton.downloadRetry {
   -moz-image-region: rect(32px, 16px, 48px, 0px);
 }
-richlistitem[type="download"]:hover > stack > .downloadButton.downloadRetry {
+.downloadButton.downloadRetry:hover {
   -moz-image-region: rect(32px, 32px, 48px, 16px);
 }
-richlistitem[type="download"]:hover > stack > .downloadButton.downloadRetry:hover {
+.downloadButton.downloadRetry:active {
   -moz-image-region: rect(32px, 48px, 48px, 32px);
-}
-richlistitem[type="download"]:hover > stack > .downloadButton.downloadRetry:active {
-  -moz-image-region: rect(32px, 64px, 48px, 48px);
 }
 
 /*** Status and progress indicator ***/
