--- a/src/chrome/browser/downloads/allDownloadsViewOverlay.css
+++ b/src/chrome/browser/downloads/allDownloadsViewOverlay.css
@@ -57,49 +57,31 @@
 .downloadButton.downloadCancel {
   -moz-image-region: rect(0px, 16px, 16px, 0px);
 }
-
-richlistitem.download:hover > .downloadButton.downloadCancel {
-   -moz-image-region: rect(0px, 32px, 16px, 16px);
+.downloadButton.downloadCancel:hover {
+  -moz-image-region: rect(0px, 32px, 16px, 16px);
 }
-
-richlistitem.download:hover > .downloadButton.downloadCancel:hover {
+.downloadButton.downloadCancel:active {
   -moz-image-region: rect(0px, 48px, 16px, 32px);
-}
-
-richlistitem.download:hover > .downloadButton.downloadCancel:active {
-  -moz-image-region: rect(0px, 64px, 16px, 48px);
 }
 
 .downloadButton.downloadShow {
   -moz-image-region: rect(16px, 16px, 32px, 0px);
 }
-
-richlistitem.download:hover > .downloadButton.downloadShow {
-   -moz-image-region: rect(16px, 32px, 32px, 16px);
+.downloadButton.downloadShow:hover {
+  -moz-image-region: rect(16px, 32px, 32px, 16px);
 }
-
-richlistitem.download:hover > .downloadButton.downloadShow:hover {
+.downloadButton.downloadShow:active {
   -moz-image-region: rect(16px, 48px, 32px, 32px);
-}
-
-richlistitem.download:hover > .downloadButton.downloadShow:active {
-  -moz-image-region: rect(16px, 64px, 32px, 48px);
 }
 
 .downloadButton.downloadRetry {
   -moz-image-region: rect(32px, 16px, 48px, 0px);
 }
-
-richlistitem.download:hover > .downloadButton.downloadRetry {
-   -moz-image-region: rect(32px, 32px, 48px, 16px);
+.downloadButton.downloadRetry:hover {
+  -moz-image-region: rect(32px, 32px, 48px, 16px);
 }
-
-richlistitem.download:hover > .downloadButton.downloadRetry:hover {
+.downloadButton.downloadRetry:active {
   -moz-image-region: rect(32px, 48px, 48px, 32px);
-}
-
-richlistitem.download:hover > .downloadButton.downloadRetry:active {
-  -moz-image-region: rect(32px, 64px, 48px, 48px);
 }
 
 #downloadsRichListBox > richlistitem.download[selected] {
@@ -107,3 +89,12 @@ richlistitem.download:hover > .downloadButton.downloadRetry:active {
   background-color: rgb(110,110,110);
 }
 
+/* Fixes for "Downloads Window" extension */
+
+#downloadsWindow > #downloadsRichListBox > richlistitem.download:not([selected="true"]):nth-child(odd) {
+  background-color: rgb(75, 75, 75) !important;
+}
+
+#downloadsWindow > #downloadsRichListBox {
+  -moz-border-bottom-colors: rgb(110, 110, 110) transparent !important;
+}
