Sync about:support styling with default

--- a/src/chrome/global/aboutSupport.css
+++ b/src/chrome/global/aboutSupport.css
@@ -78,7 +78,7 @@ td {
   overflow: hidden;
 }
 
-#reset-box {
+#action-box {
   background-color: rgb(75,75,75);
   border: 1px solid rgb(50,50,50);
   color: #fff;
@@ -91,7 +91,17 @@ td {
   width: 30%;
 }
 
-#reset-box:-moz-dir(rtl) {
+#contents {
+  clear: right;
+}
+
+#action-box,
+#reset-box,
+#safe-mode-box {
+  display: none;
+}
+
+#action-box:-moz-dir(rtl) {
   float: left;
 }
 
@@ -99,7 +109,19 @@ td {
   margin-top: 0;
 }
 
-#reset-box > button {
+#action-box button {
   display: block;
-  margin: auto;
+}
+
+#verify-place-result {
+  max-height: 200px;
+  overflow: auto;
+}
+
+.block {
+  display: block;
+}
+
+.hidden {
+  display: none;
 }
