--- a/src/chrome/browser/preferences/aboutPermissions.css
+++ b/src/chrome/browser/preferences/aboutPermissions.css
@@ -4,6 +4,13 @@
 
 @import url("chrome://global/skin/inContentUI.css");
 
+/* header */
+
+#permissions-pagetitle {
+  font-size: 200%;
+  font-weight: bold;
+  padding-bottom: 0.5em;
+}
 
 /* sites box */
 
@@ -18,14 +25,13 @@
 
 #sites-list {
   -moz-appearance: none;
-  border: 1px solid rgba(0, 0, 0, 0.32);
-  background-color: rgba(255, 255, 255, 0.4);
+  border: 1px solid rgb(75, 75, 75);
   margin: 5px 0 0 0;
 }
 
 .site {
   padding: 4px;
-  border-bottom: 1px solid ThreeDLightShadow;
+  border-bottom: 1px solid rgb(50, 50, 50);
 }
 
 .site-favicon {
@@ -68,47 +74,83 @@
 }
 
 .pref-icon {
-  width: 36px;
-  height: 36px;
+  width: 48px;
+  height: 48px;
   -moz-margin-end: 10px;
 }
 
 .pref-icon[type="password"] {
   list-style-image: url(chrome://mozapps/skin/passwordmgr/key-64.png);
 }
+.pref-icon[type="image"] {
+  list-style-image: url(chrome://global/skin/icons/question-16.svg);
+}
+.pref-icon[type="popup"] {
+  list-style-image: url(chrome://global/skin/icons/question-16.svg);
+}
 .pref-icon[type="cookie"] {
-  list-style-image: url(chrome://global/skin/icons/question-64.png);
+  list-style-image: url(chrome://global/skin/icons/question-16.svg);
+}
+.pref-icon[type="desktop-notification"] {
+  list-style-image: url(chrome://browser/skin/notification-64.png);
+}
+.pref-icon[type="install"] {
+  list-style-image: url(chrome://mozapps/skin/extensions/extensionGeneric-48.png);
 }
 .pref-icon[type="geo"] {
   list-style-image: url(chrome://browser/skin/Geolocation-64.png);
 }
 .pref-icon[type="indexedDB"] {
-  list-style-image: url(chrome://global/skin/icons/question-64.png);
-}
-.pref-icon[type="install"] {
-  list-style-image: url(chrome://mozapps/skin/extensions/extensionGeneric.png);
-}
-.pref-icon[type="popup"] {
-  list-style-image: url(chrome://global/skin/icons/question-64.png);
-}
-.pref-icon[type="image"] {
-  list-style-image: url(chrome://global/skin/icons/question-64.png);
+  list-style-image: url(chrome://global/skin/icons/question-16.svg);
 }
 .pref-icon[type="plugins"] {
-  list-style-image: url(chrome://mozapps/skin/plugins/pluginGeneric.png);
+  list-style-image: url(chrome://mozapps/skin/plugins/pluginGeneric-48.png);
 }
 .pref-icon[type="fullscreen"] {
-  list-style-image: url(chrome://global/skin/icons/question-64.png);
+  list-style-image: url(chrome://global/skin/icons/question-16.svg);
+}
+.pref-icon[type="pointerLock"] {
+  list-style-image: url(chrome://browser/skin/pointerLock-64.png);
 }
 
 .pref-title {
   font-size: 125%;
   margin-bottom: 0;
   font-weight: bold;
+  margin-right: 0;
+  padding-right: 0;
+}
+
+.pref-default {
+  margin-left: 0.5em;
+  padding-left: 0;
+}
+
+.pref-set-default {
+  visibility: collapse;
 }
 
 .pref-menulist {
   margin-left: 6px;
   margin-right: 6px;
   min-width: 10em; /* native menulists ellipsize their longest entries by default on many themes */
+}
+
+.plugins-label {
+  margin-right: 0;
+  padding-right: 0;
+}
+
+.plugins-vulnerable {
+  margin-left: 0;
+  padding-left: 0;
+  margin-right: 0;
+  padding-right: 0;
+}
+
+.plugins-default {
+  margin-left: 0.5em;
+  padding-left: 0;
+  margin-right: 1em;
+  padding-right: 0;
 }
