--- a/src/chrome/browser/syncCommon.css
+++ b/src/chrome/browser/syncCommon.css
@@ -4,7 +4,7 @@
 
 /* The following are used by both sync/setup.xul and sync/genericChange.xul */
 .status {
-  color: -moz-dialogtext;
+  color: #fff;
 }
 
 .statusIcon {
