--- a/src/chrome/browser/browser.css
+++ b/src/chrome/browser/browser.css
@@ -1265,6 +1265,12 @@ richlistitem[type~="action"][actiontype="switchtab"] > .ac-url-box > .ac-action-
   color: #fff;
 }
 
+.browserContainer > findbar {
+  background-color: rgb(43,43,43);
+  color: #fff;
+  text-shadow: none;
+}
+
 /* ::::: throbber ::::: */
 
 #navigator-throbber {
