Add new password popup styling

--- a/src/chrome/browser/browser.css
+++ b/src/chrome/browser/browser.css
@@ -1837,7 +1837,8 @@ toolbarbutton.bookmark-item[dragover="true"][open="true"] {
 }
 
 .popup-notification-icon[popupid="password-save"],
-.popup-notification-icon[popupid="password-change"] {
+.popup-notification-icon[popupid="password-change"],
+.popup-notification-icon[popupid="password"] {
   list-style-image: url(chrome://mozapps/skin/passwordmgr/key.svg#large);
 }
 
