--- a/src/chrome/appver/28/newTab.css
+++ b/src/chrome/appver/28/newTab.css
@@ -48,12 +48,30 @@
   outline: 1px dotted rgb(75,75,75);
 }
 
-#newtab-undo-close-button > .toolbarbutton-text {
-  display: none;
+#newtab-undo-close-button {
+  -moz-appearance: none;
+  padding: 0;
+  border: none;
 }
 
-#newtab-undo-close-button:-moz-focusring {
-  outline: 1px dotted;
+#newtab-undo-close-button {
+  -moz-appearance: none;
+  padding: 0;
+  border: none;
+  height: 16px;
+  width: 16px;
+  float: right;
+  right: 0;
+  background-image: url(chrome://global/skin/icons/close.svg#normal);
+  background-color: transparent;
+}
+
+#newtab-undo-close-button:hover {
+  background-image: url(chrome://global/skin/icons/close.svg#hover);
+}
+
+#newtab-undo-close-button:hover:active {
+  background-image: url(chrome://global/skin/icons/close.svg#active);
 }
 
 /* TOGGLE */
