--- a/src/chrome/os/darwin/menulist.css
+++ b/src/chrome/os/darwin/menulist.css
@@ -19,7 +19,7 @@ menulist {
 }
 
 menulist:not([popuponly="true"]) {
-  min-height: 20px !important;
+  min-height: 20px;
 }
 
 .menulist-label-box {
