--- a/src/chrome/os/linux/menu.css
+++ b/src/chrome/os/linux/menu.css
@@ -12,6 +12,7 @@
 
 menu,
 menuitem,
+menucaption,
 .splitmenu-menuitem {
   -moz-appearance: none;
   -moz-box-align: center;
@@ -34,7 +35,8 @@ menuitem[_moz-menuactive="true"],
 
 menu[disabled="true"],
 menuitem[disabled="true"],
-.splitmenu-menuitem[disabled="true"] {
+.splitmenu-menuitem[disabled="true"],
+menucaption[disabled="true"] {
   color: GrayText;
 }
 
@@ -67,6 +69,7 @@ menuitem.spell-suggestion {
 /* ::::: menu/menuitems in menulist popups ::::: */
 
 menulist > menupopup > menuitem,
+menulist > menupopup > menucaption,
 menulist > menupopup > menu {
   padding: 1px 5px;
   max-width: none;
@@ -77,6 +80,7 @@ menulist > menupopup > menu {
 
 .menu-text,
 .menu-iconic-left,
+.menu-iconic-right,
 .menu-iconic-text {
   margin-top: 0px !important;
   margin-bottom: 0px !important;
@@ -89,6 +93,12 @@ menulist > menupopup > menu {
   /* This is (18 + the size of end-padding on .menu-iconic-left)px */
   -moz-margin-start: 21px !important;
   font-weight: inherit;
+}
+
+menucaption > .menu-text,
+menucaption > .menu-iconic-text {
+  margin-inline-start: 0 !important;
+  font-weight: bold;
 }
 
 .menu-description {
@@ -109,7 +119,8 @@ menulist > menupopup > menu {
   -moz-box-pack: end;
 }
 
-.menu-iconic-left {
+.menu-iconic-left,
+.menu-iconic-right {
   width: 16px;
   /* We can only hardcode this, to make the default GTK icon<->label spacing */
   -moz-padding-end: 3px !important;
@@ -152,6 +163,7 @@ menulist > menupopup > menu {
 
 
 menulist > menupopup > menuitem > .menu-iconic-left,
+menulist > menupopup > menucaption > .menu-iconic-left,
 menulist > menupopup > menu > .menu-iconic-left {
   display: none;
 }
@@ -199,12 +211,4 @@ menulist > menupopup > menuseparator,
 .autocomplete-history-popup > menuitem {
   max-width: none !important;
   font: message-box;
-}
-
-/* ::::: tree column picker ::::: */
-
-.treecell-popupcell-menu {
-  -moz-margin-start: -2px;
-  list-style-image: url("chrome://global/skin/tree/columnpicker.svg");
-  -moz-image-region: auto;
 }
